--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -1,38 +1,38 @@
-<table>
-<tr>
-	<th><%= link_to user.name + " " + user.surname, user_path(user.id) %></th>
-</tr>
-<tr>
-	<td width="150px"><%= link_to 'Edit your profile', :action => "edit" %></td>
-</tr>
-<tr>
-	<td><%= link_to('View forum', 'topicsList') %></td>
-</tr>
-<tr>
-	<td><%= link_to('View Portfoilo', 'portfolio') %></td>
-</tr>
-<tr>
-	<td><%= link_to('View Location', 'location') %></td>
-</tr>
-</table>
+<table id="homeTable">
+	<tr>
+		<th><%= link_to user.name + " " + user.surname, user_path(user.id) %></th>
+	</tr>
+	<tr>
+		<td width="150px"><%= link_to 'Edit your profile', :action => "edit" %></td>
+	</tr>
+	<tr>
+		<td><%= link_to('View forum', 'topicsList') %></td>
+	</tr>
+	<tr>
+		<td><%= link_to('View portfoilo', 'portfolio') %></td>
+	</tr>
+	<tr>
+		<td><%= link_to('View visited locations', 'location') %></td>
+	</tr>
+	</table>
 
-<% if user.status == 'Administrator' %>
-<br />
-<table id="administrator">
-<tr>
-	<td><u>Admin Stuff:</u></td>
-</tr>
-	<td><%= link_to "Create a new profile", :controller => 'users', :action => 'new' %></td>
-	<td><%= link_to "View all profiles", :controller => 'users', :action => 'index' %></td>
-	<td><%= link_to "View all Stored data", :controller => 'storages', :action => 'index' %></td>
-<tr>
-	<td>User Created: <%= user.created_at %></td>
-	<td>User ID: <%= user.id %></td>
-	<td>User Status: <%= user.status %></td>
-</tr>
-<tr>
-	<td>User Rank: <%= user.rank %></td>
-</tr>
-<% end %>
-</tr>
+	<% if user.status == 'Administrator' %>
+		<br />
+		<table id="administrator">
+		<tr>
+			<td><u>Admin Stuff:</u></td>
+		</tr>
+			<td><%= link_to "Create a new profile", :controller => 'users', :action => 'new' %></td>
+			<td><%= link_to "View all profiles", :controller => 'users', :action => 'index' %></td>
+			<td><%= link_to "View all Stored data", :controller => 'storages', :action => 'index' %></td>
+		<tr>
+			<td>User Created: <%= user.created_at %></td>
+			<td>User ID: <%= user.id %></td>
+			<td>User Status: <%= user.status %></td>
+		</tr>
+		<tr>
+			<td>User Rank: <%= user.rank %></td>
+		</tr>
+	<% end %>
+	</tr>
 </table>
