--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -37,7 +37,10 @@
 		</li>
 		<u>New Stuff:</u>
 		<li>
-			06/02: Added a locations feature, u can now post a location
+			28/04: General refinements, website being improved
+		</li>
+		<li>
+			06/02: Added a locations feature, you can now post a location
 		</li>
 		<li>
 			29/01: Added ability to change fonts, sizes and colours
