--- a/app/views/threds/index.html.erb
+++ b/app/views/threds/index.html.erb
@@ -18,7 +18,7 @@
     <td><%= thred.title %></td>
     <td><%= thred.description %></td>
     <td><%= thred.topic_id %></td>
-    <td><%= thred.owner_id %></td>
+    <td><%= thred.user_id %></td>
     <td><%= link_to 'Show', thred %></td>
     <td><%= link_to 'Edit', edit_thred_path(thred) %></td>
     <td><%= link_to 'Destroy', thred, :confirm => 'Are you sure?', :method => :delete %></td>
