--- a/app/views/topics/topicsList.html.erb
+++ b/app/views/topics/topicsList.html.erb
@@ -16,9 +16,9 @@
     <td><%= topic.id %></td>
     <td><%= link_to topic.title, topic %><br /><%= topic.description %></td>
     <td width="50px">
-	<%= link_to 'Owner', user_path(topic.owner_id) %>
+	<%= link_to 'Owner', user_path(topic.user_id) %>
     </td>
-    <% if topic.owner_id == session[:id] %>
+    <% if topic.user_id == session[:id] %>
     <td width="130px">
     <%= link_to 'Edit your Topic', edit_topic_path(topic) %><br />
     <%= link_to 'Delete your Topic', topic, :confirm => 'Are you sure?', :method => :delete %></td>
