--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,6 +5,8 @@
     <th>ID</th>
     <th>Surname</th>
     <th>Firstname</th>
+    <th>Status</th>
+    <th>Rank</th>
   </tr>
 
 <% @users.each do |user| %>
@@ -12,6 +14,8 @@
     <td><%= user.id %></td>
     <td><%= user.surname %></td>
     <td><%= user.name %></td>
+    <td><%= user.status %></td>
+    <td><%= user.rank %></td>
     <td><%= link_to 'Show', user %></td>
     <td><%= link_to 'Edit', edit_user_path(user) %></td>
     <td><%= link_to 'Destroy', user, :confirm => 'Are you sure?', :method => :delete %></td>
@@ -21,4 +25,6 @@
 
 <br />
 
-<%= link_to 'New User(Without email activation)', new_user_path %>
+<%= link_to 'New User (Without email activation)', new_user_path %>
+ 
+</div>  
