--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -283,12 +283,98 @@ div.field, div.actions {
 	
 }
 
-#mapCanvas
-{
+#mapCanvas {
 	position:absolute;
 	z-index:10;
 	right :5px;
 	bottom:100px;
 	width:400px;
 	height:400px;
+}
+
+#mapCanvasUser {
+	position:absolute;
+	z-index:10;
+	left:10px;
+	bottom:100px;
+	width:400px;
+	height:300px;
+}
+
+.mainMenu {
+	position:absolute;
+	z-index: 100;
+	top:200px;
+	left: 10px;
+	height:400px;
+	width:100px;
+}
+
+.mainMenu ul {
+  padding-top:10px;
+  margin-left:10px;
+}
+
+.mainMenu ul li {
+  float:left;
+  list-style-type:none;
+}
+
+.mainMenu ul li a {
+  text-decoration:none;
+}
+
+.mainMenu ul li a img {
+  width:100px;
+  height:50px;
+  border:none;
+}
+
+.mainMenu ul li a span {
+  display:none;
+}
+
+.mainMenu ul li:hover a span {
+  display:inherit;
+  font-size:14px;
+  text-align:center;
+  color:#fff;
+}
+
+/* Image size hover */
+.mainMenu ul li:hover a img {
+  width:120px;
+  height:75px;
+}
+
+.mainMenu ul li:hover + li a img {
+  width:100px;
+  height:50px;
+}
+
+.mainMenu ul li:hover + li + li a img {
+  width:100px;
+  height:50px;
+}
+
+#logonForm {
+	width: 300px;
+	width: 250px;
+}
+
+.logonFields {
+	position:absolute;
+	left: 90px;
+	background-color: orange;
+	color:black;
+}
+
+.signUP {
+	font-size: 30px;	
+}
+
+#homeTable {
+	width:300px;
+	height:500px;
+	font-size:30px;
 }
