--- a/app/views/layouts/defaultLayout.html.erb
+++ b/app/views/layouts/defaultLayout.html.erb
@@ -4,12 +4,15 @@
 	<title>Nuclearflames</title>
 	<%= stylesheet_link_tag :all %>
 	<%= javascript_include_tag :all %>
+	<%= stylesheet_link_tag "application" %>
+<%= javascript_include_tag "application", "http://cdn.sublimevideo.net/js/3s7oes9q.js" %>
     <script type="text/javascript"
       src="http://maps.googleapis.com/maps/api/js?key=AIzaSyB3gx_9qaR1qczUh-vHg35EhzDYTtfwfNs&sensor=true">
     </script>
-	<% if session[:id] %>
+    
+	<% if current_user %>
 	<style type="text/css">
-	a,p,u,td {font-size: <%= user.size %>px; color:<%= user.color %>;font-family:<%= user.font %>; Arial, Comic Sans MS; }
+	a,p,u,td {font-size: <%= current_user.size %>px; color:<%= current_user.color %>;font-family:<%= current_user.font %>; Arial, Comic Sans MS; }
 	</style>
 	<% end %>
 	<%= yield(:calendar) %>
@@ -20,7 +23,7 @@
 <body onload="initialize()">
 	<div id="header">
 		<span id="home">
-		<% if !session[:id] %>
+		<% if !current_user %>
 			<%= link_to "Home", :controller => "home", :action => "index" %> | 
 		<% else %>
 		<%= link_to "Home", :controller => "home", :action => "home" %> | 
@@ -32,12 +35,12 @@
 			<%= notice %>
 		</span>
 		<span id="loggedin">
-		<% if session[:id] %>
-			You are logged in as: <%= link_to(user.name + " " + user.surname, user_path(user.id)) %><br />
-			<span id="logOff">Click here to <%= link_to('Logoff', '../../../logons/logoff')%> 
-			<%=h image_tag user.photo.url(:thumb), :id=>"profilePic" %></span>
+		<% if current_user %>
+			You are logged in as: <%= link_to(current_user.name + " " + current_user.surname, user_path(current_user.id)) %><br />
+			<span id="logOff">Click here to <%= link_to('Logoff', '../../../logout' )%> 
+			<%=h image_tag current_user.photo.url(:thumb), :id=>"profilePic" %></span>
 		<% else %>
-			You are not logged in, <%= link_to "Log in", "../../../../logons/logon" %> or  <%= link_to('Signup', '../../../../users/new') %>
+			You are not logged in, <%= link_to "Log in", "../../../login" %> or  <%= link_to('Signup', '../../../users/new') %>
 		<% end %>
 		</span>
 	</div>
