--- a/app/assets/stylesheets/scaffold.css.erb
+++ b/app/assets/stylesheets/scaffold.css.erb
@@ -82,7 +82,7 @@ div.field, div.actions {
 	
 	height: 750px;
 	
-	background-image:url(<%=image_tag "websiteFlame_BG.jpg" %>);
+	background-image:url(<%=image_path "websiteFlame_BG.jpg" %>);
 	
 }
 
