--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -37,11 +37,14 @@
 		<li>
 			Create a blog
 		</li>
-		<u>Bugs and glitch fixes:</u>
+		<u>Bugs, glitch fixes, to do's:</u>
 		<li>
-			Font-sizes, colours, profile photos are auto deleted from the server for unkown reasons
+			Font-sizes, colours, profile photos are auto deleted from the server for unkown reasons, user auto logs on after signup - fix
 		</li>
 		<u>New Stuff:</u>
+		<li>
+			10/05: Redeveloped the login script with Authlogic
+		</li>
 		<li>
 			28/04: General refinements, website being improved
 		</li>
