--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -29,7 +29,7 @@
 	<p>
 		This website is an expression of some of the skills that I have in Ruby on Rails, JavaScript and Mysql/Postgres.
 		<br />
-		To view my profile navigate here: <%= link_to "James Grant", "users/2" %>
+		To view my profile navigate here: <%= link_to "James Grant", "../../users/2" %>
 	</p>
 	<h2>To do list:</h2>
 	<ul>
