--- a/app/views/home/storage.html.erb
+++ b/app/views/home/storage.html.erb
@@ -12,7 +12,7 @@
 		<td>Decription: <%=h storage.description %></td>
 		<td><%=h link_to('Download',storage.file.url()) %></td>
 		<td><%=h link_to('Edit', edit_storage_path(storage)) %></td>
-		<td><%= link_to 'Delete', storage, :confirm => 'Are you sure you want to permanantley delete this data?', :method => :delete %></td>
+		<td><%= button_to 'Delete', storage, :confirm => 'Are you sure you want to permanantley delete this data?', :method => :delete %></td>
 	</tr>
   <% end %>
 </p>
