--- a/app/views/storages/show.html.erb
+++ b/app/views/storages/show.html.erb
@@ -12,3 +12,4 @@
 
 <%= link_to 'Edit', edit_storage_path(@storage) %> |
 <%= link_to 'Home', :controller => 'home', :action => 'home' %>
+<%= button_to 'Destroy', storage_path, :confirm => 'Are you sure?', :method => :delete %>
