--- a/app/assets/stylesheets/scaffold.css.erb
+++ b/app/assets/stylesheets/scaffold.css.erb
@@ -113,13 +113,13 @@ div.field, div.actions {
 	
 	z-index: 0;
 	
-	left: 100px;
+	left: 25px;
 	
 	top: 50px;
 	
-	font-size: 30px;
+	font-size: 15px;
 	
-	width: 200px;
+	width: 400px;
 	
 }
 
@@ -181,9 +181,9 @@ div.field, div.actions {
 	
 	left: 5px;
 	
-	top: 820px;
+	top: 800px;
 	
-    z-index: -1;
+	z-index: -1;
 	
 }
 
@@ -370,12 +370,14 @@ div.field, div.actions {
 	color:black;
 }
 
-.signUP {
-	font-size: 30px;	
-}
-
 #homeTable {
 	width:300px;
 	height:500px;
 	font-size:30px;
+}
+
+#information {
+	position: absolute;
+	right: 50px;
+	width: 450px;
 }
