--- a/app/views/layouts/defaultLayout.html.erb
+++ b/app/views/layouts/defaultLayout.html.erb
@@ -92,11 +92,13 @@
 		</div>
 	</div>
 	<div id="disclaimer">
-	<p>
-	Disclaimer: Use this webiste at your own risk, I accept no responsibility for any problems anyone has with this website.
-	<br />
-	This website is in development so please bare with me as new content will be added to this website!!
-	</p>
+		<p>
+		Disclaimer: Use this webiste at your own risk, I accept no responsibility for any problems anyone has with this website.
+		<br />
+			By using this website you also agree that any data given and stored by the website is done so at your consent and at your own risk.
+		<br />
+			This website is in development so please bare with me as new content will be added to this website!!
+		</p>
 	</div>
 	</body>
 </html>
