--- a/app/assets/stylesheets/designs.css.erb
+++ b/app/assets/stylesheets/designs.css.erb
@@ -4,6 +4,7 @@ body {
 	font-family:"Arial","Times New Roman","Comic Sans MS";
 	color: #ffffff;
 	z-index: -10;
+	word-wrap: break-word
 }
 ul {
 	list-style: none;
@@ -377,7 +378,17 @@ div.field, div.actions {
 }
 
 #information {
-	position: absolute;
-	right: 50px;
-	width: 450px;
+	position: relative;
+	left: 30px;
+	height:300px;
+	width: 400px;
+}
+
+.information {
+	position: relative;
+	width: 400px;
+}
+
+#maps {
+	position: relative;
 }
